advanced-html-css/week-3/grandmas-kittens/style.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: #ebebeb;
  font-family: Arial, sans-serif;
}

/* Header styles */
.header {
  padding: 25px 0;

  text-align: center;
  font-size: 1.3rem;
}

.header__title {
  font-weight: bold;
  letter-spacing: 2.4px;
}

/* Content styles */
.content {
  max-width: 1440px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 180px 1fr 180px;
  margin-bottom: 50px;
  padding: 0 10px;
}

/* Menu styles */
.menu {
  width: 180px;
  background-color: #d9d9d9;
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
}

.menu-radio {
  display: none;
}

.menu__item {
  padding: 25px 10px;
  border-bottom: 1px solid #fff;
  box-shadow: 0 1px 0 #8d8a8a;
  cursor: pointer;
}

.menu__item:hover {
  background-color: #5a5a5a;
  color: #fff;
}

.input-abissyn:checked ~ .cards__list li:not(.abissyn),
.input-britain:checked ~ .cards__list li:not(.britain),
.input-russian-blue:checked ~ .cards__list li:not(.russian-blue),
.input-siam:checked ~ .cards__list li:not(.siam) {
  opacity: .3;
}

.input-abissyn:checked ~ .cards__list li:not(.abissyn) .cards__desc,
.input-britain:checked ~ .cards__list li:not(.britain) .cards__desc,
.input-russian-blue:checked ~ .cards__list li:not(.russian-blue) .cards__desc,
.input-siam:checked ~ .cards__list li:not(.siam) .cards__desc {
  display: none;
}

/* Cards styles */
.cards {
  max-width: 100%;
  min-height: 100%;
  margin: 0 10px;
}

.cards__list {
  display: grid;
  column-gap: 10px;
  row-gap: 6px;
  max-width: 100%;
  list-style: none;
  margin: 0;
  margin-bottom: 10px;
  padding: 0;
}

.cards__list:last-child {
  margin-bottom: 0;
}

.cards__item {
  position: relative;
}

.cards__item img {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

.cards__item .cards__desc {
  display: block;
  position: absolute;
  bottom: 25px;
  left: 2px;
  background-color: rgba(0, 0, 0, .3);
  color: #fff;
  padding: 10px 15px;
  opacity: 0;
  transition: opacity .25s linear;
}

.cards__item:hover .cards__desc {
  opacity: 1;
}

.first {
  grid-area: 1 / 1 / 2 / 2;
}

.second {
  grid-area: 1 / 2 / 2 / 4;
}

.third {
  grid-area: 2 / 1 / 3 / 2;
}

.fourth {
  grid-area: 2 / 2 / 3 / 3;
}

.fifth {
  grid-area: 2 / 3 / 3 / 4;
}

.sixth {
  grid-area: 3 / 1 / 4 / 3;
}

.seventh {
  grid-area: 3 / 3 / 4 / 4;
}

.eighth {
  grid-area: 4 / 1 / 5 / 4;
}


/* Rating styles */
.rating {
  width: 180px;
  background-color: #d9d9d9;
  align-self: flex-start;
}

.rating__title {
  font-size: 1.3rem;
  font-weight: normal;
  color: #f00;
  text-align: left;
  text-transform: uppercase;
  margin: 0;
  padding: 5px 10px 0 0;
}

.rating__label {
  display: inline-block;
  font-size: 0.7rem;
  margin-left: 78px;
  margin-bottom: 10px;
}

.rating__input {
  appearance: none;
  display: inline-block;
  width: 14px;
  height: 14px;
  border: .5px solid gray;
  vertical-align: top;
  background-color: #ececec;
}

.rating__input:checked {
  background: url(./images/checked.svg) no-repeat top 50% left 50% #a8e3fa;
  border: none;
}

.rating__wrapper {
  display: flex;
  flex-direction: column;
  padding: 10px;
}

.rating__item {
  margin-bottom: 15px;
  display: flex;
  flex-wrap: wrap;
}

.rating__item:first-child {
  --value: -9;
}

.rating__item:nth-of-type(2) {
  --value: -8;
}

.rating__item:nth-of-type(3) {
  --value: -10;
}

.rating__item:last-child {
  --value: -4;
}

.rating__name {
  display: block;
  width: 100%;
  margin-bottom: 5px;
}

meter {
  display: block;
  width: 140px;
  height: 15px;
  -webkit-appearance: none;
  border: 1px solid #ccc;
  background: linear-gradient(90deg, #0ae973, #fdfffe);
}

#one {
  width: calc(140px - 10%);
}

#two {
  width: calc(140px - 20%);
  background: linear-gradient(90deg, #fff715, #fffa68, #fdfffe, #fff);
}

#three {
  width: calc(140px - 0%);
}

#four {
  width: calc(140px - 50%);
  background: linear-gradient(90deg, #ec3430, #fdfffe);
}

.rating__value {
  display: inline-block;
  margin-left: auto;
}

#sort:checked~.rating__wrapper>.rating__item {
  order: var(--value);
}

/* Footer styles */
.footer {
  border-top: 2px solid #d9d9d9;
  padding: 20px 50px;
}

.footer__inner {
  max-width: 1440px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

.footer__contacts {
  color: #1634a3;
}

